--- a/extension/package.json
+++ b/extension/package.json
@@ -15,6 +15,10 @@
     "@types/chrome": "^0.1.31",
     "chrome-types": "^0.1.390",
     "copy-webpack-plugin": "^13.0.1",
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.4",
+    "sass": "^1.94.2",
+    "sass-loader": "^16.0.6",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
     "webpack": "^5.103.0",
