--- a/extension/package.json
+++ b/extension/package.json
@@ -23,5 +23,8 @@
     "typescript": "^5.9.3",
     "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "firebase": "^12.6.0"
   }
 }
