--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -1,6 +1,10 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "es2017",
+        "lib": [
+            "es2017",
+            "dom"
+        ],
         "module": "commonjs",
         "outDir": "./dist",
         "strict": true,
