--- a/extension/package.json
+++ b/extension/package.json
@@ -25,6 +25,7 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "firebase": "^12.6.0"
+    "firebase": "^12.6.0",
+    "rxjs": "^7.8.2"
   }
 }
