--- a/extension/package.json
+++ b/extension/package.json
@@ -6,19 +6,24 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.1.31",
+    "@types/jest": "^30.0.0",
     "chrome-types": "^0.1.390",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
+    "jest": "^30.2.0",
+    "jest-chrome": "^0.8.0",
+    "jest-environment-jsdom": "^30.2.0",
     "mini-css-extract-plugin": "^2.9.4",
     "sass": "^1.94.2",
     "sass-loader": "^16.0.6",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
     "webpack": "^5.103.0",
