fix tests and version updste

--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -10,7 +10,9 @@
         "strict": true,
         "esModuleInterop": true,
         "types": [
-            "chrome"
+            "chrome",
+            "jest",
+            "node"
         ]
     },
     "include": [
