--- a/extension/package.json
+++ b/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extension",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/chrome": "^0.1.31",
     "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.3",
     "chrome-types": "^0.1.390",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
